# PortalInvoiCyChile

./: .gitignore  .mailmap  404.html  FAQ.html  README.md  about.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
Digitacion/: Digitacion.html  Digitacion_Emision.html  Registro_Empresa.html  Registro_Items.html  Registro_Receptores.html
Downloads/: Archivo_Json_DTE.json  Downloads.html  Downloads_Archivos.html  Layout_de_Emision_de_DTE.xlsx
Integracion/: AutenticacionAPIRest.html  Integracion_API_REST.html
InvoiCy_Core/: InvoiCy_OCR_Internacional.html
Revisiones/: Release Notes.html  Release_Notes.html  Version_9_99_9.html  timeline_versions.json
assets/javascripts/: annotations.js  curso-reforma-nova-guia.js  filter-error-code.js  links_nova_guia.js  return-to-page.js  search-dedicated.js  search-dedicated_new-old.js  search-dedicated_old.js  toggle-footer-position.js
assets/stylesheets/: annotations.css  breakpoints.css  components.css  extra.css  utilities.css
docs/: CNAME  FAQ.md  about.md  index.md
docs/Digitacion/: Digitacion.md  Digitacion_Emision.md  Registro_Empresa.md  Registro_Items.md  Registro_Receptores.md
docs/Downloads/: Archivo_Json_DTE.json  Downloads.md
docs/Integracion/: AutenticacionAPIRest.md  Integracion_API_REST.md
docs/InvoiCy_Core/: InvoiCy_OCR_Internacional.md
docs/Revisiones/: Release Notes.md  Version_9_99_9.md  timeline_versions.json
docs/stylesheets/: extra.css
overrides/: main.html
overrides/partials/: alternate.html  footer.html  (+4 more)
search/: search_index.json
stylesheets/: extra.css
(+38 files in other folders)
