[tool.poetry]
name = "portalinvoicyuruguay"
version = "0.1.0"
description = ""
authors = ["Leonardo Peres <leonardoperes@migrate.info>", "Gustavo Paluchowski <gustavopaluchowski@migrate.info>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = {extras = ["i18n"], version = "^1.5.3"}
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3.1"
mkdocs-glightbox = "^0.4.0"
mkdocs-git-authors-plugin = "^0.10.0"
mkdocs-material-extensions = "^1.3.1"
mkdocs-git-revision-date-localized-plugin = "^1.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
